feat: Implemented Google Maps API in employees route.
Google Maps API stored in vendor folder. Map is created in google-map component. JSON file in public folder is accessed and data used to create markers on map with infowindows.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,7 +11,7 @@
     <div class='collapse navbar-collapse' id='myNavbar'>
       <ul class='nav navbar-nav'>
         <li>{{#link-to 'index'}}Home{{/link-to}}</li>
-        <li>{{#link-to 'employees'}}Employees{{/link-to}}</li>
+        <li>{{#link-to 'employees'}}Employee Distribution{{/link-to}}</li>
         <li>{{#link-to 'metrics'}}Metrics{{/link-to}}</li>
         <li>{{#link-to 'data'}}Data{{/link-to}}</li>
       </ul>
