--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,45 @@
 body {
     padding: 50px 15px 0 15px;
 }
+
+.map-canvas {
+    width: 100%;
+    height: 400px;
+    margin: auto;
+}
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+/* Small devices (tablets, 768px and up) */
+@media screen and (min-width: 768px) {
+  body {
+    width: 768px;
+    margin: auto;
+    }
+    .map-canvas {
+        width: 100%;
+        height: 600px;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    body {
+        width: 992px;
+        margin: auto;
+    }
+    .map-canvas {
+        width: 100%;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    body {
+        width: 1200px;
+        margin: auto;
+    }
+    .map-canvas {
+        width: 100%;
+    }
+}
