--- a/app/templates/employees.hbs
+++ b/app/templates/employees.hbs
@@ -1,3 +1,5 @@
-<h2>Map of employee distribution</h2>
+<h2>Employee Geographical Distribution</h2>
+<br>
+{{google-map latitude="39.8282" longitude="-98.5795"}}
 
 {{outlet}}
