--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,8 +12,8 @@
       <ul class='nav navbar-nav'>
         <li>{{#link-to 'index'}}Home{{/link-to}}</li>
         <li>{{#link-to 'employees'}}Employee Distribution{{/link-to}}</li>
-        <li>{{#link-to 'metrics'}}Metrics{{/link-to}}</li>
-        <li>{{#link-to 'data'}}Data{{/link-to}}</li>
+        <li>{{#link-to 'metrics'}}Key Metrics{{/link-to}}</li>
+        <li>{{#link-to 'data'}}Open Issues{{/link-to}}</li>
       </ul>
     </div>
   </div>
