--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -1,5 +1,6 @@
 <div id='table-div'>
-    <table id='data-table'>
+    <br>
+    <table id='data-table' class='table table-striped table-bordered dataTable'>
     </table>
 </div>
 
