--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -1,6 +1,11 @@
-<div id='table-div'>
-    <br>
-    <table id='data-table' class='table table-striped table-bordered dataTable'>
+<div id="table-div">
+    <input class="search" placeholder="Filter by your input">
+    <button class="sort" data-sort="issue_number">Sort by Issue #</button>
+    <table id='data-table' class='table table-striped table-bordered'>
+        <tr id='table-titles-row'>
+        </tr>
+        <tbody id='table-body' class="list">
+        </tbody>
     </table>
 </div>
 
