--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -2,9 +2,20 @@
     <input class="search" placeholder="Filter by your input">
     <button class="sort" data-sort="issue_number">Sort by Issue #</button>
     <table id='data-table' class='table table-striped table-bordered'>
-        <tr id='table-titles-row'>
-        </tr>
         <tbody id='table-body' class="list">
+            {{#each issues as |issue|}}
+            <tr>
+                {{#each issue as |column|}}
+
+                    {{#if @first}}
+                        <td><strong>{{column}}</strong></td>
+                    {{else}}
+                        <td>{{column}}</td>
+                    {{/if}}
+
+                {{/each}}
+            </tr>
+            {{/each}}
         </tbody>
     </table>
 </div>
