--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -1,20 +1,23 @@
 <div id="table-div">
-    <input class="search" placeholder="Filter by your input">
-    <button class="sort" data-sort="issue_number">Sort by Issue #</button>
     <table id='data-table' class='table table-striped table-bordered'>
-        <tbody id='table-body' class="list">
-            {{#each issues as |issue|}}
+        <thead>
             <tr>
-                {{#each issue as |column|}}
-
-                    {{#if @first}}
-                        <td><strong>{{column}}</strong></td>
-                    {{else}}
-                        <td>{{column}}</td>
-                    {{/if}}
-
-                {{/each}}
+                <th>Submit Time</th>
+                <th>Cust Name</th>
+                <th>Cust Email</th>
+                <th>Description</th>
+                <th>Open/Closed</th>
+                <th>Closed Time</th>
+                <th>Employee Assigned</th>
             </tr>
+        </thead>
+        <tbody>
+            {{#each issues as |issue|}}
+                <tr>
+                    {{#each issue as |column|}}
+                        <td class=''>{{column}}</td>
+                    {{/each}}
+                </tr>
             {{/each}}
         </tbody>
     </table>
