feat: Table now launches collapsed on mobile devices, but shows all data when screen permits feat: Changed wording across menus

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class='navbar navbar-inverse navbar-fixed-top'>
+<nav id='navbarContainer' class='navbar navbar-inverse navbar-fixed-top'>
   <div class='container-fluid'>
     <div class='navbar-header'>
       <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
@@ -6,7 +6,7 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <div class='navbar-brand'>{{#link-to 'index'}}Unicorn Corporation{{/link-to}}</div>
+      <div class='navbar-brand'>{{#link-to 'index'}}Unicorn Inc.{{/link-to}}</div>
     </div>
     <div class='collapse navbar-collapse' id='myNavbar'>
       <ul class='nav navbar-nav'>
