--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -1,5 +1,5 @@
 <div id="table-div">
-    <table id='data-table' class='table table-striped table-bordered'>
+    <table id='data-table' class='table table-striped table-bordered table-sm'>
         <thead>
             <tr>
                 <th>Submit Time</th>
