feat: Removed JS DOM manipulation from key-metrics component in favor of handlebars templating chore: Beautified JS with jsbeautifier.org

--- a/app/templates/components/key-metrics.hbs
+++ b/app/templates/components/key-metrics.hbs
@@ -1,4 +1,6 @@
-<div id='open-issues-div'></div>
+<div id='open-issues-div'>
+    <p><strong>Open support issues: </strong>{{openIssues}}</p>
+</div>
 <div id='paying-customers-div'></div>
 <div id='reported-issues-div'></div>
 
