--- a/app/templates/components/issue-data.hbs
+++ b/app/templates/components/issue-data.hbs
@@ -2,20 +2,16 @@
     <table id='data-table' class='table table-striped table-bordered table-sm'>
         <thead>
             <tr>
-                <th>Submit Time</th>
-                <th>Cust Name</th>
-                <th>Cust Email</th>
-                <th>Description</th>
-                <th>Open/Closed</th>
-                <th>Closed Time</th>
-                <th>Employee Assigned</th>
+                {{#each header as |item|}}
+                <th>{{item}}</th>
+                {{/each}}
             </tr>
         </thead>
-        <tbody>
+        <tbody id='data-table-body'>
             {{#each issues as |issue|}}
                 <tr>
                     {{#each issue as |column|}}
-                        <td class=''>{{column}}</td>
+                        <td>{{column}}</td>
                     {{/each}}
                 </tr>
             {{/each}}
